[package]
name = "spin"
version = "0.6.0"
authors = [
	"Mathijs van de Nes <git@mathijs.vd-nes.nl>",
	"John Ericson <git@JohnEricson.me>",
	"Joshua Barretto <joshua.s.barretto@gmail.com>",
]
license = "MIT"
repository = "https://github.com/mvdnes/spin-rs.git"
keywords = ["spinlock", "mutex", "rwlock"]
description = "Spin-based synchronization primitives"

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}
lock_api_crate = { package = "lock_api", version = "0.4", optional = true }

[features]
default = ["ticket_mutex"]
lock_api = ["lock_api_crate"]
ticket_mutex = []
std = []
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]
